@@ -1,3 +1,11 @@
+2005-08-17  Marcus Meissner  <marcus@jet.franken.de>
+
+	* usb/libusb.c: Recurse into the interfaces to see
+	  HID devices and similar so we can skip them.
+
+	  This avoids unnecessary listing of some
+	  non camera devices and usb:XXX,YYY confusion.
+
 2005-08-14  Marcus Meissner  <marcus@jet.franken.de>
 
 	* configure.in: Use "disk" unconditional. 
